2005-03-09  Christopher Faylor  <cgf@timesys.com>

	* pinfo.h (pinfo::pinfo): Clear more elements in the constructor.

2005-03-09  Christopher Faylor  <cgf@timesys.com>

	* net.cc (dup_ent): Revert older stupid test for null.  Don't copy name
	if it is NULL.

2005-03-09  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::eid_pipe_name): Fix format
	string.
	(fhandler_socket::connect): Set sun_path before running eid credential
	transaction.  Run transaction only if OS connect was successful.
	(fhandler_socket::accept): Run transaction only if OS accept was
	successful.

2005-03-09  Corinna Vinschen  <corinna@vinschen.de>

	* signal.cc (sigprocmask): Rename first parameter to "how".
	(handle_sigprocmask): Ditto.  Check "how" for being a valid "how" value.
	Fix call order in case of wrong "how" value.

2005-03-09  Christopher Faylor  <cgf@timesys.com>

	* net.cc (dup_ent): Revert previous stupid change.

2005-03-09  Christopher Faylor  <cgf@timesys.com>

	* net.cc (dup_ent): Avoid dereferencing a null pointer in a debug_printf.

2005-03-09  Christopher Faylor  <cgf@timesys.com>

	* path.cc (path_conv::check): Treat ENOSHARE similarly to ENOENT when
	determining if there was a problem with a symlink.

2005-03-08  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::listen): Don't limit the number
	of pipe instances.

2005-03-08  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (pinfo::exit): Right shift exit value by eight when not
	started in a cygwin environment.

2005-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (mmap64): Handle MAP_AUTOGROW flag.
	(fhandler_disk_file::mmap): Ditto. Clean conditional for readability.
	* include/sys/mman.h: Add MAP_AUTOGROW flag.
	* include/cygwin/version.h: Bump API minor version.

2005-03-08  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (dll_crt0_0): Eliminate muto::init call.
	* sync.h (locker): New, currently unused class.
	(muto::init): Eliminate.