@@ -552,7 +552,7 @@ initial_env ()
       len = GetModuleFileName (NULL, buf1, CYG_MAX_PATH);
       strlwr (buf1);
       strlwr (buf);
-      char *p = strchr (buf, ':');
+      char *p = strpbrk (buf, ":=");
       if (!p)
 	p = (char *) "gdb.exe -nw";
       else
